kyverno/policies/security/no-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Blokuje kontenery z włączonymi uprawnieniami privileged.
      Privileged kontenery mają dostęp do wszystkich urządzeń hosta.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-privileged
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Kontenery privileged są zabronione"
        pattern:
          spec:
            containers:
            - name: "*"
              securityContext:
                privileged: "false"
            =(ephemeralContainers):
            - name: "*"
              securityContext:
                privileged: "false"
