kyverno/policies/security/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require Non-Root User
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Wymaga, aby kontenery nie uruchamiały się jako root.
      Zmniejsza ryzyko w przypadku kompromitacji kontenera.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-non-root
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Kontenery muszą uruchamiać się jako użytkownik niebędący rootem"
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
            - name: "*"
              securityContext:
                runAsNonRoot: true
                =(runAsUser): ">0"
